# panda

./: .coverage  Dockerfile  agent.py  discord_bot.py  main.py  pyproject.toml  telegram_bot.py  test_bedrock.py  whatsapp_server.py
.github/workflows/: deploy.yml
agent/: __init__.py  config.py  memory_manager.py  orchestrator.py  scheduler.py  skills_manager.py
memory/: LongTermMemory.md  memory.md  soul.md  tools.md  user.md  user_profile.md
memory/nodes/: README.md  childhood.md
skills/: README.md  check_emails.py  delayed_ping.sh  open_youtube_search.py  print_ping.py  send_email.py  skills_meta.json
tests/: conftest.py  test_config.py  test_discord_bot.py  test_memory_manager.py  test_orchestrator.py  test_scheduler.py  test_skills_manager.py  test_tools.py  test_whatsapp_server.py
tools/: __init__.py  cron_tools.py  memory_tools.py  skill_tools.py  subagent_tools.py
