[project]
name = "panda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.21",
    "discord-py>=2.7.1",
    "fastapi>=0.136.3",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "rich>=15.0.0",
    "speechrecognition>=3.16.1",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
